# mecanumbot_msgs

mecanumbot_msgs/: CMakeLists.txt  package.xml
mecanumbot_msgs/msg/: AccessMotorCmd.msg  ActionDescriptor.msg  ActionTuple.msg  ButtonEvent.msg  ControllerStatus.msg  JoystickEvent.msg  OpenCRState.msg  SensorState.msg
mecanumbot_msgs/srv/: ApplyMapping.srv  DeleteRecordingScheme.srv  DeleteRobotAction.srv  DeleteRobotMapping.srv  GetActionUsages.srv  GetLedStatus.srv  GetMappingDetails.srv  GetMappingNames.srv  GetMappings.srv  GetRecordingSchemes.srv  GetRobotActions.srv  RegisterAction.srv  SaveMapping.srv  SaveRecordingScheme.srv  SaveRobotAction.srv  SetLedStatus.srv  SyncActions.srv  SyncMappings.srv
